2011-04-17	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Refactor out of Codnar.

2011-04-14	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Initial empty repository
