@@ -4,7 +4,7 @@ module Olag
   # This version number. The third number is automatically updated to track the
   # number of Git commits by running +rake+ +git+.
   def self.version
-    return "0.1.2"
+    return "0.1.3"
   end
 
 end
