@@ -1,5 +1,6 @@
 2011-04-17	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
+	* Fix commit process.
 	* Refactor out of Codnar.
 
 2011-04-14	Oren Ben-Kiki <github-oren@ben-kiki.org>
